examples/errors/error.txt
processing 0.gf2...
Line 1:
MONITORS
^
Error 0x0002: Must have monitor list last (after devices list and connections) in definition file, initialised by 'MONITORS'
There is 1 error


processing 10.gf2...
Line 4:
NAND G12;
        ^
Error 0x000A: Need colon after name for CLOCK/SWITCH/GATE type
Line 5:
NAND G2:2;
^
Error 0x0018: Need semicolon at end of previous line
Unconnected Input : G4.I1
Unconnected Input : G3.I1
There are 2 errors


processing 11.gf2...
Line 4:
NAND 1:2;
     ^
Error 0x000B: Name must start with letter and only contain letter number and '_'
Unconnected Input : G3.I1
Unconnected Input : G2.I2
There is 1 error


processing 12.gf2...
Line 11:
1.I1 = S1;
^
Error 0x000C: Connection must start with the name of a device
Unconnected Input : G1.I1
There is 1 error


processing 13.gf2...
Line 20:
MONITORS
^
Error 0x0020: Block must be terminated with 'END'
There is 1 error


processing 14.gf2...
Line 14:
D2.DATA = D1;
            ^
Error 0x000E: Expect a dot after DTYPE
Line 15:
D3.DATA = D2.Q;
^
Error 0x0018: Need semicolon at end of previous line
Unconnected Input : D3.DATA
Unconnected Input : D2.DATA
There are 2 errors


processing 15.gf2...
Unconnected Input : G4.I2


processing 16.gf2...
Line 18:
G4.I2 G3;
      ^
Error 0x0010: Must specify output to connect to input with equals sign 
Unconnected Input : G4.I2
There is 1 error


processing 17.gf2...
Unconnected Input : G4.I2


processing 18.gf2...
Line 18:
G4I2 = G3;
     ^
Error 0x0012: Need to specify valid iput gate seperated from device name by a '.'
Unconnected Input : G4.I2
There is 1 error


processing 19.gf2...
Unconnected Input : G4.I2


processing 1.gf2...
Line 1:
CONNECTIONS
^
Error 0x0000: Must have device list first in definition file, initialised with 'DEVICES'
Line 12:
MONITORS
^
Error 0x0002: Must have monitor list last (after devices list and connections) in definition file, initialised by 'MONITORS'
Unconnected Input : G4.I2
Unconnected Input : G4.I1
Unconnected Input : G3.I2
Unconnected Input : G3.I1
Unconnected Input : G2.I2
Unconnected Input : G2.I1
Unconnected Input : G1.I2
Unconnected Input : G1.I1
There are 2 errors


processing 20.gf2...
Logic Simulator: interactive command interface
# Running for 50 cycles
S2                 :--------------------------------------------------
G4                 :--------------------------------------------------
# Logic Simulator: terminating.


processing 21.gf2...
Line 25:

^
Error 0x0015: Expecting device name or END after semicolon (device name must start with letter)
Line 26:

^
Error 0x0018: Need semicolon at end of previous line
There are 2 errors


processing 22.gf2...
Line 33:
D1;
  ^
Error 0x0016: Expect a dot after DTYPE as must specify output to monitor in monitor list
Line 34:
D2.Q;
^
Error 0x0018: Need semicolon at end of previous line
There are 2 errors


processing 23.gf2...
Logic Simulator: interactive command interface
# Running for 50 cycles
D1.Q               :___--__--__--__--__--__--__--__--__--__--__--__--_
D2.Q               :_____--__--__--__--__--__--__--__--__--__--__--__-
D3.Q               :_______--__--__--__--__--__--__--__--__--__--__--_
D4.Q               :_________--__--__--__--__--__--__--__--__--__--__-
# Logic Simulator: terminating.


processing 24.gf2...
Line 35:
D3.Q;
^
Error 0x0018: Need semicolon at end of previous line
There is 1 error


processing 25.gf2...
Line 27:
DEVICES
^
Error 0x0019: Must only be one devices list
There is 1 error


processing 26.gf2...
Line 9:
CONNECTIONS
^
Error 0x0000: Must have device list first in definition file, initialised with 'DEVICES'
Line 20:
MONITORS
^
Error 0x0002: Must have monitor list last (after devices list and connections) in definition file, initialised by 'MONITORS'
Line 25:

^
Error 0x001A: There must be one 'DEVICES' block, it may not have been initialised properly
There are 3 errors


processing 28.gf2...
Line 27:
CONNECTIONS
^
Error 0x001C: Must only be one connections list
Warning 0x0000: You have not specfied any conenctions. Please check this is what is required
There is 1 error and 1 warning


processing 29.gf2...
Line 27:
MONITORS
^
Error 0x001D: Must only be one monitors list
Warning 0x0001: You have not specfied any monitors. Please check this is what is required
There is 1 error and 1 warning


processing 2.gf2...
Line 1:
MONITORS
^
Error 0x0002: Must have monitor list last (after devices list and connections) in definition file, initialised by 'MONITORS'
There is 1 error


processing 30.gf2...
Line 10:
MONITORS
^
Error 0x0002: Must have monitor list last (after devices list and connections) in definition file, initialised by 'MONITORS'
Line 15:

^
Error 0x001E: There must be one 'CONNECTIONS' block, it may not have been initialised properly
Unconnected Input : G4.I2
Unconnected Input : G4.I1
Unconnected Input : G3.I2
Unconnected Input : G3.I1
Unconnected Input : G2.I2
Unconnected Input : G2.I1
Unconnected Input : G1.I2
Unconnected Input : G1.I1
There are 2 errors


processing 31.gf2...
Line 20:

^
Error 0x001F: There must be one 'MONITOR' block, it may not have been initialised properly
There is 1 error


processing 32.gf2...
Line 9:
CONNECTIONS
^
Error 0x0020: Block must be terminated with 'END'
There is 1 error


processing 3.gf2...
Line 2:
END
^
Error 0x0003: Must have at least one device in devices list
Warning 0x0000: You have not specfied any conenctions. Please check this is what is required
Warning 0x0001: You have not specfied any monitors. Please check this is what is required
There is 1 error and 2warnings


processing 4.gf2...
Line 2:
S1:0;
^
Error 0x0004: Need device type for device definition
Unconnected Input : G2.I1
Unconnected Input : G1.I1
There is 1 error


processing 5.gf2...
Line 9:
CONNECTIONS
^
Error 0x0020: Block must be terminated with 'END'
There is 1 error


processing 6.gf2...
Line 2:
CLOCK CLK1:-1;
           ^
Error 0x0006: Clock must have integer clock number greater than 0
Unconnected Input : G3.I2
Unconnected Input : G1.I1
There is 1 error


processing 7.gf2...
Line 2:
SWITCH S1:2;
          ^
Error 0x0007: Switch must be set to either 0 or 1
Unconnected Input : G2.I1
Unconnected Input : G1.I1
There is 1 error


processing 8.gf2...
Line 4:
NAND G1:20;
        ^
Error 0x0008: Must specify an integer number of inputs between 1 and 16 to a GATE
Unconnected Input : G3.I1
Unconnected Input : G2.I2
There is 1 error


processing 9.gf2...
Line 2:
CLOCK CLK1:;
           ^
Error 0x0006: Clock must have integer clock number greater than 0
Line 3:
CLOCK CLK2:2;
^
Error 0x0018: Need semicolon at end of previous line
Unconnected Input : G3.I2
Unconnected Input : G3.I1
Unconnected Input : G2.I2
Unconnected Input : G1.I1
There are 2 errors


processing warning0.gf2...
Warning 0x0000: You have not specfied any conenctions. Please check this is what is required
Unconnected Input : G4.I2
Unconnected Input : G4.I1
Unconnected Input : G3.I2
Unconnected Input : G3.I1
Unconnected Input : G2.I2
Unconnected Input : G2.I1
Unconnected Input : G1.I2
Unconnected Input : G1.I1
There are no errors and 1 warning


processing warning1.gf2...
Warning 0x0001: You have not specfied any monitors. Please check this is what is required
There are no errors and 1 warning
Logic Simulator: interactive command interface
# Running for 50 cycles
# Logic Simulator: terminating.


